# paperscraper

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run_search.py  run_web.py  setup.bat  setup.py  setup_git.bat
.github/workflows/: ci.yml
src/paperscraper/: __init__.py  __main__.py  api.py  export.py  models.py  web.py
src/paperscraper/templates/: base.html  index.html  results.html
tests/: __init__.py  test_api.py  test_export.py
